manifests/example-1-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-example1-nginx
spec:
  selector:
    app: istio-example1-nginx
  ports:
  - port: 80
    targetPort: 80
