manifests/example-1-nginx/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-example1-nginx
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-example-nginx
spec:
  hosts:
  - "example1.com"
  gateways:
  - istio-example1-nginx
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        # kubernetes service name
        host: istio-example1-nginx
        port:
          number: 80
